tests/error/unknown_new.gw
// [contains] in 'new' expression
new kugsqd;
